# hellobye

./: INSTALL  Makefile  Makefile.in  Makefile.lnx  Makefile.mingw.bak  Makefile_mingw.am  README.md  README.txt  config.status  configure  configure.ac  setup.bat  setup.sh  setupwin.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile  Makefile.in  Makefile.lnx  OVERVIEW
man/: Makefile.am  Makefile.in  Makefile.lnx  Makefile.mingw  bye.8  hellobye.8
script/: Makefile  Makefile.am  Makefile.in  Makefile.lnx  hellobye.sh
src/: Makefile.am  Makefile.in  Makefile.lnx  Makefile.mingw  bye.c  bye.h
src/.deps/: bye.Po  hello.Po
src/doc/: OVERVIEW
src/man/: hello.8
